--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,23 @@ body {
   background-size: 100% 100%;
   display: none;
 
-  -webkit-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860); 
-   -moz-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860); 
-    -ms-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860); 
-     -o-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860); 
-        transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860); /* easeInOutCirc */
-        
+  -webkit-transition: -webkit-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
+   -moz-transition: -moz-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
+    -ms-transition: -ms-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
+     -o-transition: -o-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
+        transition: transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); /* custom */
+
+}
+
+.noresize #instructions {
+  
+}
+
+#instructions.toLeft {
+  -webkit-transform: translateX(-250px);
+}
+#instructions.toRight {
+  -webkit-transform: translateX(250px);
 }
 
 #content {
