--- a/css/style.css
+++ b/css/style.css
@@ -29,11 +29,12 @@ body {
   text-shadow:  0 1px 1px rgba(255, 255, 255, 1);
   font-size: 1.1em;
   position: absolute;
+  z-index: 60;
   background: transparent url(../img/pictophone.png) no-repeat top left;
   background-size: 100% 100%;
   display: none;
 
-  -webkit-transition: -webkit-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
+  -webkit-transition: -webkit-transform 1.9s cubic-bezier(0.205, 0.375, 0.165, 1.000); 
    -moz-transition: -moz-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
     -ms-transition: -ms-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
      -o-transition: -o-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
@@ -52,11 +53,11 @@ body {
   -webkit-transform: translateX(250px);
 }
 
-#content {
+#content, #contentcopy {
   width: 700px;
   height: 300px;
   position: absolute;
-  background: transparent url(../img/message.png?) no-repeat top left;
+  background: transparent url(../img/message_big.png?) no-repeat top left;
   z-index: 5;
   
   -webkit-user-drag: none;
@@ -69,7 +70,12 @@ body {
   display: none;
 }
 
-#content.big {
+#contentcopy {
+  z-index: 20;
+}
+
+#content.big,
+#contentcopy.big {
   background-image: url(../img/message_big.png?);
   background-size: 100% 100%;
 }
@@ -503,4 +509,11 @@ canvas {
   height: 300px;
   position: absolute;
   z-index: 10;
+  opacity: 1;
+  -webkit-transform: translateZ(0);
+  -webkit-transition: opacity 1500ms ease-in-out;
+}
+
+canvas.fkoff {
+  opacity: 0.3;
 }
