--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,32 @@ html, body, div, p {
 }
 
 body {
-  background: transparent url(../img/background.png) repeat top left;
+  background: #FCF8F4;
+}
+
+canvas {
+  width: 580px;
+  height: 580px;
+  position: absolute;
+  z-index: 10;
+  opacity: 1;
+  -webkit-transform: translateZ(0);
+  background: transparent;
+}
+
+.canvasContainer {
+  position: absolute;
+  width: 660px;
+  height: 660px;
+  background: transparent url(../img/paper_pattern.png?) repeat top left;
+  box-shadow: 0 13px 12px -6px rgba(0, 0, 0, 0.7), 5px -5px 15px -5px rgba(0, 0, 0, 0.8), -5px -5px 15px -5px rgba(0, 0, 0, 0.8), inset 0 15px 40px -20px rgba(0, 0, 0, 0.8);
+  
+  background-size: 30% 30%;
+}
+
+.canvasBackground {
+  position: absolute;
+  background: #DDD url(../img/background.png) repeat top left;
 }
 
 .container {
@@ -18,6 +43,44 @@ body {
     -moz-user-drag: none;
     -ms-user-select: none;
     user-select: none;
+
+    -webkit-perspective: 5000;
+    -moz-perspective: 5000;
+    -ms-perspective: 5000;
+    -o-perspective: 5000;
+    perspective: 5000;
+}
+
+.covershadow {
+  position: absolute;
+  background: transparent url(../img/shad.png) no-repeat bottom left;
+  background-size: 100% 100%;
+  height: 0;
+  width: 740px;
+  -webkit-transition: height 300ms ease-in-out;
+}
+
+.covershadow.opened {
+  height: 60px;
+}
+
+#cover {
+  position: absolute;
+  background: transparent url(../img/cover.png?) repeat top left;
+  z-index: 100;
+  -webkit-transition: -webkit-transform 1000ms ease-in-out; 
+     -moz-transition: -moz-transform 1000ms ease-in-out; 
+      -ms-transition: -ms-transform 1000ms ease-in-out; 
+       -o-transition: -o-transform 1000ms ease-in-out; 
+          transition: transform 1000ms ease-in-out; /* custom */
+
+  -webkit-transform-origin: center 0;
+
+  background-size: 100% 100%;
+}
+
+#cover.opened {
+  -webkit-transform: rotate3d(1, 0, 0, 110deg);
 }
 
 #instructions {
@@ -34,24 +97,24 @@ body {
   background-size: 100% 100%;
   display: none;
 
-  -webkit-transition: -webkit-transform 1.9s cubic-bezier(0.205, 0.375, 0.165, 1.000); 
-     -moz-transition: -moz-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
-      -ms-transition: -ms-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
-       -o-transition: -o-transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); 
-          transition: transform 1900ms cubic-bezier(0.205, 0.375, 0.165, 1.000); /* custom */
+  -webkit-transition: -webkit-transform 1200ms ease-in-out; 
+     -moz-transition: -moz-transform 1200ms ease-in-out; 
+      -ms-transition: -ms-transform 1200ms ease-in-out; 
+       -o-transition: -o-transform 1200ms ease-in-out; 
+          transition: transform 1200ms ease-in-out; /* custom */
 
 }
 
 #instructions.toLeft {
-  -webkit-transform: translateX(-250px);
+  -webkit-transform: translateX(-200px);
 }
 #instructions.toRight {
-  -webkit-transform: translateX(250px);
+  -webkit-transform: translateX(200px);
 }
 
 #content, #contentcopy {
-  width: 700px;
-  height: 300px;
+  width: 580px;
+  height: 580px;
   position: absolute;
   background: transparent url(../img/message_big.png?) no-repeat top left;
   z-index: 5;
@@ -73,12 +136,12 @@ body {
 #content.big,
 #contentcopy.big {
   background-image: url(../img/message_big.png?);
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 #overlay {
-    width: 700px; 
-    height: 300px; 
+    width: 580px; 
+    height: 580px; 
     position: absolute;
     z-index: 10;
     display: none;
@@ -500,16 +563,4 @@ body {
 
 
 
-canvas {
-  width: 700px;
-  height: 300px;
-  position: absolute;
-  z-index: 10;
-  opacity: 1;
-  -webkit-transform: translateZ(0);
-  -webkit-transition: opacity 1500ms ease-in-out;
-}
 
-canvas.fkoff {
-  opacity: 0.3;
-}
