--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,35 @@ canvas {
   background-size: 100% 100%;
   height: 0;
   width: 740px;
-  -webkit-transition: height 300ms ease-in-out;
+  -webkit-transition: height 300ms ease-out;
+  opacity: 0.7;
+  z-index: 0;
 }
 
 .covershadow.opened {
   height: 60px;
 }
 
+#insideshadow {
+  position: absolute;
+  background: transparent url(../img/inside_shadow.png) no-repeat top left;
+  opacity: 0.3;
+  width: 660px;
+  height: 660px;
+  background-size: 100% 100%;
+  z-index: 20;
+  -webkit-transition: -webkit-transform 600ms ease-in;
+  -webkit-transform-origin: center top;
+  -webkit-backface-visibility: hidden;
+}
+
+#insideshadow.opened {
+  -webkit-transform: rotate3d(1, 0, 0, 86deg);
+}
+
 #cover {
   position: absolute;
-  background: transparent url(../img/cover.png?) repeat top left;
+  background: transparent url(../img/cover2.png?) repeat top left;
   z-index: 100;
   -webkit-transition: -webkit-transform 1000ms ease-in-out; 
      -moz-transition: -moz-transform 1000ms ease-in-out; 
@@ -75,12 +94,41 @@ canvas {
           transition: transform 1000ms ease-in-out; /* custom */
 
   -webkit-transform-origin: center 0;
+  -moz-transform-origin: center 0;
+  -ms-transform-origin: center 0;
+  -o-transform-origin: center 0;
+  transform-origin: center 0;
 
   background-size: 100% 100%;
 }
 
 #cover.opened {
   -webkit-transform: rotate3d(1, 0, 0, 110deg);
+}
+
+.logo {
+  background: transparent url(../img/logo.png) no-repeat top left;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  width: 136px;
+  height: 28px;
+}
+.logo.white {
+  background-image:url(../img/logo_white.png);
+}
+
+#cover .logo {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  display: block;
+}
+
+.container .logo {
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
+  display: none;
 }
 
 #instructions {
@@ -106,10 +154,18 @@ canvas {
 }
 
 #instructions.toLeft {
+  -o-transform: translateX(-200px);
+  -ms-transform: translateX(-200px);
+  -moz-transform: translateX(-200px);
   -webkit-transform: translateX(-200px);
+  transform: translateX(-200px);
 }
 #instructions.toRight {
+  -o-transform: translateX(200px);
+  -ms-transform: translateX(200px);
+  -moz-transform: translateX(200px);
   -webkit-transform: translateX(200px);
+  transform: translateX(200px);
 }
 
 #content, #contentcopy {
@@ -117,7 +173,6 @@ canvas {
   height: 580px;
   position: absolute;
   background: transparent url(../img/message_big.png?) no-repeat top left;
-  z-index: 5;
   
   -webkit-user-drag: none;
   -webkit-user-select: none;
@@ -147,7 +202,12 @@ canvas {
     display: none;
     -webkit-user-drag: none;
     -webkit-user-select: none;
-    -webkit-user-modify: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -moz-user-drag: none;
+    user-select: none;
+    left: 40px;
+    top: 40px;
 }
 
 .overlay-triangle {
@@ -159,9 +219,12 @@ canvas {
   height: 0;
   border-bottom: 20px solid transparent; 
   border-left: 20px solid #FFF;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
-    -webkit-user-modify: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -moz-user-drag: none;
+  user-select: none;
 }
 
 .overlay-triangle.odd {
@@ -170,6 +233,22 @@ canvas {
   border-top: 20px solid transparent; 
   border-right: 20px solid #FFF;
   margin-left: -20px;
+}
+
+#fake-canvas {
+  width: 660px;
+  height: 660px;
+  background: transparent url(../img/paper_pattern.png?) repeat top left;
+  position: absolute;
+}
+
+#fake-background {
+  position: absolute;
+  left: 40px;
+  right: 40px;
+  top: 40px;
+  bottom: 40px;
+  background: transparent url(../img/background.png) repeat top left;
 }
 
 
@@ -182,6 +261,8 @@ canvas {
   -moz-transform: translateZ(0);
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
+  left: 50%;
+  top: 50%;
 }
 
 .intro-triangle {
@@ -201,6 +282,12 @@ canvas {
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
 }
+
+
+
+/*
+* I'm tired of these motherfuckin' triangles on this motherfuckin' plane
+*/
 
 #it1 {
   top: 160px;
