--- a/css/style.css
+++ b/css/style.css
@@ -69,18 +69,18 @@ canvas {
 #insideshadow {
   position: absolute;
   background: transparent url(../img/inside_shadow.png) no-repeat top left;
-  opacity: 0.3;
+  opacity: 0.4;
   width: 660px;
   height: 660px;
   background-size: 100% 100%;
   z-index: 20;
-  -webkit-transition: -webkit-transform 600ms ease-in;
+  -webkit-transition: -webkit-transform 650ms ease-in;
   -webkit-transform-origin: center top;
   -webkit-backface-visibility: hidden;
 }
 
 #insideshadow.opened {
-  -webkit-transform: rotate3d(1, 0, 0, 86deg);
+  -webkit-transform: rotate3d(1, 0, 0, 80deg) translateY(-40px);
 }
 
 #cover {
@@ -100,6 +100,7 @@ canvas {
   transform-origin: center 0;
 
   background-size: 100% 100%;
+  -webkit-transform: translateZ(150px) translateY(10px) scale(0.97);
 }
 
 #cover.opened {
