--- a/css/style.css
+++ b/css/style.css
@@ -33,22 +33,23 @@ canvas {
   background: #DDD url(../img/background.png) repeat top left;
 }
 
-.container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -moz-user-drag: none;
-    -ms-user-select: none;
-    user-select: none;
+#container {
+  opacity: 0;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -moz-user-drag: none;
+  -ms-user-select: none;
+  user-select: none;
 
-    -webkit-perspective: 5000;
-    -moz-perspective: 5000;
-    -ms-perspective: 5000;
-    -o-perspective: 5000;
-    perspective: 5000;
+  -webkit-perspective: 5000;
+  -moz-perspective: 5000;
+  -ms-perspective: 5000;
+  -o-perspective: 5000;
+  perspective: 5000;
 }
 
 .covershadow {
@@ -118,14 +119,14 @@ canvas {
   background-image:url(../img/logo_white.png);
 }
 
-#cover .logo {
+#container #cover .logo {
   position: absolute;
   bottom: 20px;
   right: 20px;
   display: block;
 }
 
-.container .logo {
+#container .logo {
   position: absolute;
   bottom: 40px;
   right: 40px;
@@ -151,7 +152,6 @@ canvas {
       -ms-transition: -ms-transform 1200ms ease-in-out; 
        -o-transition: -o-transform 1200ms ease-in-out; 
           transition: transform 1200ms ease-in-out; /* custom */
-
 }
 
 #instructions.toLeft {
