--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ canvas {
   width: 580px;
   height: 580px;
   position: absolute;
-  z-index: 10;
+  z-index: 40;
   opacity: 1;
   -webkit-transform: translateZ(0);
   background: transparent;
@@ -31,6 +31,7 @@ canvas {
 .canvasBackground {
   position: absolute;
   background: #DDD url(../img/background.png) repeat top left;
+  z-index: 10;
 }
 
 #container {
@@ -60,7 +61,7 @@ canvas {
   width: 740px;
   -webkit-transition: height 300ms ease-out;
   opacity: 0.7;
-  z-index: 0;
+  z-index: 50;
 }
 
 .covershadow.opened {
@@ -74,7 +75,7 @@ canvas {
   width: 660px;
   height: 660px;
   background-size: 100% 100%;
-  z-index: 20;
+  z-index: 90;
   -webkit-transition: -webkit-transform 650ms ease-in;
   -webkit-transform-origin: center top;
   -webkit-backface-visibility: hidden;
@@ -86,7 +87,7 @@ canvas {
 
 #cover {
   position: absolute;
-  background: transparent url(../img/cover2.png?) repeat top left;
+  background: transparent url(../img/cover_large.png?) repeat top left;
   z-index: 100;
   -webkit-transition: -webkit-transform 1000ms ease-in-out; 
      -moz-transition: -moz-transform 1000ms ease-in-out; 
@@ -102,6 +103,10 @@ canvas {
 
   background-size: 100% 100%;
   -webkit-transform: translateZ(150px) translateY(10px) scale(0.97);
+}
+
+#cover.small {
+  background: transparent url(../img/cover.png?) repeat top left!important;
 }
 
 #cover.opened {
@@ -173,7 +178,6 @@ canvas {
   width: 580px;
   height: 580px;
   position: absolute;
-  background: transparent url(../img/message_big.png?) no-repeat top left;
   z-index: 0;
   -webkit-user-drag: none;
   -webkit-user-select: none;
@@ -185,8 +189,14 @@ canvas {
   display: none;
 }
 
-#contentcopy {
+#content {
+  top: 40px;
+  left: 40px;
   z-index: 20;
+}
+
+#contentcopy {
+  z-index: 60;
 }
 
 #content.big,
