--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ canvas {
   box-shadow: 0 13px 12px -6px rgba(0, 0, 0, 0.7), 5px -5px 15px -5px rgba(0, 0, 0, 0.8), -5px -5px 15px -5px rgba(0, 0, 0, 0.8), inset 0 15px 40px -20px rgba(0, 0, 0, 0.8);
   
   background-size: 30% 30%;
+  -webkit-background-size: 30% 30%;
+  -moz-background-size: 30% 30%;
+  -o-background-size: 30% 30%;
 }
 
 .canvasBackground {
@@ -62,11 +65,19 @@ canvas {
   position: absolute;
   background: transparent url(../img/shad.png) no-repeat bottom left;
   background-size: 100% 100%;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
   height: 0;
   width: 740px;
-  -webkit-transition: height 300ms ease-out;
   opacity: 0.7;
   z-index: 50;
+
+  -webkit-transition: height 300ms ease-out;
+  -moz-transition: height 300ms ease-out;
+  -ms-transition: height 300ms ease-out;
+  -o-transition: height 300ms ease-out;
+  transition: height 300ms ease-out;
 }
 
 .covershadow.opened {
@@ -80,6 +91,9 @@ canvas {
   width: 660px;
   height: 660px;
   background-size: 100% 100%;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
   z-index: 90;
 
   -webkit-transition: -webkit-transform 650ms ease-in;
@@ -122,6 +136,9 @@ canvas {
   transform-origin: center 0;
 
   background-size: 100% 100%;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
 
   -webkit-transform: translateZ(150px) translateY(10px) scale(0.97);
   -moz-transform: translateZ(150px) translateY(10px) scale(0.97);
@@ -174,7 +191,12 @@ canvas {
   position: absolute;
   z-index: 60;
   background: transparent url(../img/pictophone.png) no-repeat top left;
+  
   background-size: 100% 100%;
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+
   display: none;
 
   -webkit-transition: -webkit-transform 1200ms ease-in-out; 
@@ -228,22 +250,25 @@ canvas {
 #contentcopy.big {
   background-image: url(../img/message_big.png?);
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
 
 #overlay {
-    width: 580px; 
-    height: 580px; 
-    position: absolute;
-    z-index: 10;
-    display: none;
-    -webkit-user-drag: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -moz-user-drag: none;
-    user-select: none;
-    left: 40px;
-    top: 40px;
+  width: 580px; 
+  height: 580px; 
+  position: absolute;
+  z-index: 10;
+  display: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -moz-user-drag: none;
+  user-select: none;
+  left: 40px;
+  top: 40px;
 }
 
 .overlay-triangle {
