--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@ html, body, div, p {
   border: 0;
 }
 
-body {
+body, html {
   background: #FCF8F4;
+  height: 100%;
+  width: 100%;
 }
 
 canvas {
