--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,12 @@ html, body, div, p {
   border: 0;
 }
 
-body {
+html, body {
   background: #FCF8F4;
+  height: 100%;
+  width: 100%;
+  overflow: visible;
+  -webkit-transform-origin: center center;
 }
 
 canvas {
@@ -29,6 +33,8 @@ canvas {
   background: transparent url(../img/paper_pattern.png?) repeat top left;
   box-shadow: 0 13px 12px -6px rgba(0, 0, 0, 0.7), 5px -5px 15px -5px rgba(0, 0, 0, 0.8), -5px -5px 15px -5px rgba(0, 0, 0, 0.8), inset 0 15px 40px -20px rgba(0, 0, 0, 0.8);
   
+  -webkit-transform: rotate3d(0, 0, 0, 0);
+
   background-size: 30% 30%;
   -webkit-background-size: 30% 30%;
   -moz-background-size: 30% 30%;
@@ -46,6 +52,10 @@ canvas {
   position: relative;
   width: 100%;
   height: 100%;
+
+
+  -webkit-transform: translate3d(0, 0, 0, 0);
+
   -webkit-user-drag: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -53,12 +63,11 @@ canvas {
   -ms-user-select: none;
   user-select: none;
 
-  -webkit-perspective: 5000;
-  -moz-perspective: 5000;
-  -ms-perspective: 5000;
-  -o-perspective: 5000;
-  perspective: 5000;
-  -ms-transform: perspective(5000);
+  -webkit-perspective: 5000px;
+  -moz-perspective: 5000px;
+  -ms-perspective: 5000px;
+  -o-perspective: 5000px;
+  perspective: 5000px;
 }
 
 .covershadow {
@@ -72,6 +81,8 @@ canvas {
   width: 740px;
   opacity: 0.7;
   z-index: 50;
+
+  -webkit-transform: translate3d(0, 0, 0, 0);
 
   -webkit-transition: height 300ms ease-out;
   -moz-transition: height 300ms ease-out;
@@ -97,10 +108,10 @@ canvas {
   z-index: 90;
 
   -webkit-transition: -webkit-transform 650ms ease-in;
-  -moz-transition: -webkit-transform 650ms ease-in;
-  -ms-transition: -webkit-transform 650ms ease-in;
-  -o-transition: -webkit-transform 650ms ease-in;
-  transition: -webkit-transform 650ms ease-in;
+  -moz-transition: -moz-transform 650ms ease-in;
+  -ms-transition: -ms-transform 650ms ease-in;
+  -o-transition: -o-transform 650ms ease-in;
+  transition: transform 650ms ease-in;
 
   -webkit-transform-origin: center top;
   -moz-transform-origin: center top;
