--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ canvas {
   position: relative;
   width: 100%;
   height: 100%;
+  z-index: 5;
 
 
   -webkit-transform: translate3d(0, 0, 0, 0);
@@ -376,7 +377,24 @@ canvas {
   transform: translateZ(0);
 }
 
-
+.please-wait {
+  position: absolute;
+  width: 300px;
+  height: 100px;
+  left: 50%;
+  top: 50%;
+  margin-left: -150px;
+  margin-top: -50px;
+  display: block;
+  z-index: 1;
+  font-size: 20px;
+  font-family: HelveticaNeue, Arial, sans-serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+  color: #322927;
+  text-shadow: 0 1px 1px #FFF;
+}
 
 /*
 * I'm tired of these motherfuckin' triangles on this motherfuckin' plane
